[package]
name = "vault"
version = "1.2.5"
authors = ["Coin98"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
arrayref = "~0.3.6"
num_enum = "~0.5.10"
solana-program = "~1.18.26"
mpl-token-metadata = "4.1.2"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[lib]
name = "vault"
crate-type = ["cdylib", "lib"]
